# D_A_Complete

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakeSettings.json  README.md
design/: app_scene.ui  config_scene.ui  gui.ui  plotting_scene.ui
include/galileo/Application/: AppScene.h  ApplicationModel.h  ConfigScene.h  PlottingScene.h  global.h
include/galileo/Framework/: Application.h  IApplicationModel.h  IScene.h  SceneMachine.h  global.h
include/galileo/common/: readme.txt
src/galileo/: CMakeLists.txt
src/galileo/Application/: AppScene.cpp  ApplicationModel.cpp  CMakeLists.txt  CMakeLists.txt.bak  ConfigScene.cpp  PlottingScene.cpp
src/galileo/Framework/: Application.cpp  CMakeLists.txt  IApplicationModel.cpp  IScene.cpp  SceneMachine.cpp
src/galileo/Loader/: CMakeLists.txt  main.cpp  main.cpp.bak
